docs/docusaurus/versions/version-4.0.0/en-US/source/1.guide.md
# Guide

> Here is the document map that helps users learn and use the TuGraph community version quickly.

## Quick Start

> Understand [What is a Graph](./2.introduction/1.what-is-graph.md),[The application scenarios of graph](./2.introduction/7.scenarios.md),[What is TuGraph](./2.introduction/3.what-is-tugraph.md).

> Quickly Install and deploy TuGraph:[Cloud Deployment](./5.developer-manual/1.installation/5.cloud-deployment.md),[Docker Deployment](./5.developer-manual/1.installation/3.docker-deployment.md).

> Quickly get started with DEMO:[Movie](./3.quick-start/2.demo/1.movie.md),[The Wandering Earth](./3.quick-start/2.demo/2.wandering-earth.md),[Three Body](./3.quick-start/2.demo/3.the-three-body.md),[Three Kingdoms](./3.quick-start/2.demo/4.three-kingdoms.md).

> User Guide:[TuGraph Browser](./4.user-guide/1.tugraph-browser.md),[TuGraph Browser Legacy](./4.user-guide/2.tugraph-browser-legacy.md).

## Development Guide

> Client Tools:[Cpp Client](./5.developer-manual/4.client-tools/2.cpp-client.md),[Java Client](./5.developer-manual/4.client-tools/3.java-client.md),[Python Client](./5.developer-manual/4.client-tools/1.python-client.md).

> TuGraph Query Language:[Cypher API](./5.developer-manual/6.interface/1.query/1.cypher.md).

> Interface:[Cypher API](./5.developer-manual/6.interface/1.query/1.cypher.md),[OLAP API](./5.developer-manual/6.interface/2.olap/1.tutorial.md),[Procedure API](5.developer-manual/6.interface/3.procedure/1.procedure.md),[RESTful API](./5.developer-manual/6.interface/4.protocol/1.restful-api.md),[RPC API](./5.developer-manual/6.interface/4.protocol/2.rpc-api.md)。

## Community Contribution

> Before starting to contribute, you can learn [how to contribute](./6.contributor-manual/1.contributing.md)

> If you want to understand the division of community roles, please visit [community roles](./6.contributor-manual/2.community-roles.md)

## Video Center

> [Quick start with TuGraph](https://space.bilibili.com/1196053065/channel/seriesdetail?sid=2593741)

> [TuGraph technology sharing collection](https://space.bilibili.com/1196053065/channel/seriesdetail?sid=3009777)

> [Understand graph computing in 3 minutes](https://www.bilibili.com/video/BV15U4y1r7AW/?spm_id_from=333.999.0.0)

## Git Repository

> [TuGraph DB](https://github.com/TuGraph-family/tugraph-db)

> [TuGraph DB Browser](https://github.com/TuGraph-family/tugraph-db-browser)

> [Java Client](https://github.com/TuGraph-family/tugraph-db-client-java)

> [Micro-benchmark](https://github.com/TuGraph-family/gdbms-microbenchmark)

> [TuGraph SNB Interactive](https://github.com/TuGraph-family/tugraph-snb-interactive)

## Change Log

> [Change Log](https://github.com/TuGraph-family/tugraph-db/blob/master/release/CHANGELOG.md)