docs/docusaurus/versions/version-4.0.1/en-US/source/1.guide.md
# Guide

> Here is the document map that helps users learn and use the TuGraph community version quickly.

## Quick Start

> Understand [What is a Graph](./2.introduction/1.what-is-graph.md),[The application scenarios of graph](./2.introduction/7.scenarios.md),[What is TuGraph](./2.introduction/3.what-is-tugraph.md).

> Quickly Install and deploy TuGraph:[Cloud Deployment](./5.developer-manual/1.installation/5.cloud-deployment.md),[Docker Deployment](./5.developer-manual/1.installation/3.docker-deployment.md).

> Quickly get started with DEMO:[Movie](./3.quick-start/2.demo/1.movie.md),[The Wandering Earth](./3.quick-start/2.demo/2.wandering-earth.md),[Three Body](./3.quick-start/2.demo/3.the-three-body.md),[Three Kingdoms](./3.quick-start/2.demo/4.three-kingdoms.md).

> User Guide:[TuGraph Browser](./4.user-guide/1.tugraph-browser.md),[TuGraph Browser Legacy](./4.user-guide/2.tugraph-browser-legacy.md).

## Development Guide

> Client Tools:[Cpp Client](./5.developer-manual/4.client-tools/2.cpp-client.md),[Java Client](./5.developer-manual/4.client-tools/3.java-client.md),[Python Client](./5.developer-manual/4.client-tools/1.python-client.md).

> TuGraph Query Language:[Cypher API](./5.developer-manual/6.interface/1.query/1.cypher.md).

> Interface:[Cypher API](./5.developer-manual/6.interface/1.query/1.cypher.md),[OLAP API](./5.developer-manual/6.interface/2.olap/1.tutorial.md),[Procedure API](5.developer-manual/6.interface/3.procedure/1.procedure.md),[RESTful API](./5.developer-manual/6.interface/4.protocol/1.restful-api.md),[RPC API](./5.developer-manual/6.interface/4.protocol/2.rpc-api.md)。

## Community Contribution

> Before starting to contribute, you can learn [how to contribute](./6.contributor-manual/1.contributing.md)

> If you want to understand the division of community roles, please visit [community roles](./6.contributor-manual/2.community-roles.md)

## Main warehouse

> TuGraph-DB repository: [https://github.com/TuGraph-family/tugraph-db](https://github.com/TuGraph-family/tugraph-db)

> Visual interface: [https://github.com/TuGraph-family/tugraph-db-browser](https://github.com/TuGraph-family/tugraph-db-browser)

> Java client: [https://github.com/TuGraph-family/tugraph-db-client-java](https://github.com/TuGraph-family/tugraph-db-client-java)

> Simple test method based on twitter data: [https://github.com/TuGraph-family/gdbms-microbenchmark](https://github.com/TuGraph-family/gdbms-microbenchmark)

> Test method based on standard LDBC-SNB: [https://github.com/TuGraph-family/tugraph-snb-interactive](https://github.com/TuGraph-family/tugraph-snb-interactive)

> TuGraph-Analytics repository: [https://github.com/TuGraph-family/tugraph-analytics](https://github.com/TuGraph-family/tugraph-analytics)

## Video Center

> [Get started quickly with TuGraph](https://space.bilibili.com/1196053065/channel/seriesdetail?sid=2593741)

> [TuGraph technology sharing collection](https://space.bilibili.com/1196053065/channel/seriesdetail?sid=3009777)

> [Understand graph calculation in 3 minutes](https://www.bilibili.com/video/BV15U4y1r7AW/)

## TuGraph-Latest-Version

| Description | File | Link |
|---------------------|--------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| CentOS7 runtime package | tugraph-4.0.1-1.el7.x86_64.rpm | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-4.0.1-1.el7.x86_64.rpm) |
| CentOS8 runtime package | tugraph-4.0.1-1.el8.x86_64.rpm | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-4.0.1-1.el8.x86_64.rpm) |
| Ubuntu18.04 runtime package | tugraph-4.0.1-1.x86_64.deb | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-4.0.1-1.x86_64.deb) |
| CentOS7 runtime image | tugraph-runtime-centos7-4.0.1.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-runtime-centos7-4.0.1.tar), [Visit](https://hub.docker.com/r/tugraph/tugraph-runtime-centos7) |
| CentOS8 runtime image | tugraph-runtime-centos8-4.0.1.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-runtime-centos8-4.0.1.tar), [Visit](https://hub.docker.com/r/tugraph/tugraph-runtime-centos8) |
| Ubuntu18.04 runtime image | tugraph-runtime-ubuntu18.04-4.0.1.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-runtime-ubuntu18.04-4.0.1.tar) , [Visit](https://hub.docker.com/r/tugraph/tugraph-runtime-ubuntu18.04) |
| CentOS7 mini runtime package | tugraph-mini-4.0.1-1.el7.x86_64.rpm | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-mini-4.0.1-1.el7.x86_64.rpm) |
| CentOS8 mini runtime package | tugraph-mini-4.0.1-1.el8.x86_64.rpm | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-mini-4.0.1-1.el8.x86_64.rpm) |
| Ubuntu18.04 mini runtime package | tugraph-mini-4.0.1-1.x86_64.deb | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-mini-4.0.1-1.x86_64.deb) |
| CentOS7 mini runtime image | tugraph-mini-runtime-centos7-4.0.1.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-mini-runtime-centos7-4.0.1.tar) , [Visit](https://hub.docker.com/r/tugraph/tugraph-mini-runtime-centos7) |
| CentOS8 mini runtime image | tugraph-mini-runtime-centos8-4.0.1.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-mini-runtime-centos8-4.0.1.tar) , [Visit](https://hub.docker.com/r/tugraph/tugraph-mini-runtime-centos8) |
| Ubuntu18.04 mini runtime image | tugraph-mini-runtime-ubuntu18.04-4.0.1.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-4.0.1/tugraph-mini-runtime-ubuntu18.04-4.0.1.tar), [Visit](https://hub.docker.com/r/tugraph/tugraph-mini-runtime-ubuntu18.04) |
| CentOS7 compilation image | tugraph-compile-centos7-1.2.7.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-docker-compile/tugraph-compile-centos7-1.2.7.tar), [Visit](https://hub.docker.com/r/tugraph/tugraph-compile-centos7) |
| CentOS8 compilation image | tugraph-compile-centos8-1.2.7.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-docker-compile/tugraph-compile-centos8-1.2.7.tar), [Visit](https://hub.docker.com/r/tugraph/tugraph-compile-centos8) |
| Ubuntu18.04 compilation image | tugraph-compile-ubuntu18.04-1.2.7.tar | [Download](https://tugraph-web.oss-cn-beijing.aliyuncs.com/tugraph/tugraph-docker-compile/tugraph-compile-ubuntu18.04-1.2.7.tar) , [Visit](https://hub.docker.com/r/tugraph/tugraph-compile-ubuntu18.04) |


For the version update log, see: [Link](https://github.com/TuGraph-family/tugraph-db/blob/master/release/CHANGELOG_CN.md).

If you don't know how to use installation packages and images, please refer to [Environment and Version Selection](./7.best-practices/4.selection.md).